@@ -1,10 +1,8 @@
 ## Makefile.am for the TeX Live subdirectory texk/dvipsk/squeeze/
 ##
-## Copyright (C) 2009, 2012 Peter Breitenlohner <tex-live@tug.org>
+## Copyright (C) 2009-2014 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 ##
-ACLOCAL_AMFLAGS = -I ../../../m4
-
 AM_CFLAGS = $(WARNING_CFLAGS)
 
 noinst_PROGRAMS = squeeze
